# Kasane-Logic

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  analyzer.csv  benchmark_results_all.csv  benchmark_results_mixed.csv  benchmark_results_single.csv  clippy.toml  fix_imports.py  fix_tests.py  fix_tests_clone.py  memo.txt  oput.json  output.txt  report-manifest.json  report.html
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: bench.yml  benchmark.yml  codspeed.yml  criterion.yml  divan.yml  draft-tests.yml  main-merge-tests.yml
Memori/: report-manifest.json  report.html
Memori/Line Function Long(Tokyo-Nagoya)/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+14 more)
Memori/Line Function Short (Marunouchi South Exit-KITTE)/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+14 more)
Memori/Sphere Function/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+14 more)
Memori/Triangle Function/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+14 more)
Memori/VBitSet Insert/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+14 more)
Triangle関数の可視化/: 001.json  002.json  003.json  main.json
benches/: line.rs  set.rs  sphere.rs  triangle.rs  triangle_large.rs  triangle_memory.rs  triangle_small.rs  vbit_set.rs
benches/data/: sample1.txt
benches/query/: unary_ops.rs  workflow_bldg_risk.rs
benches/spatial_id_set/: geometry_cylinder_set.rs  geometry_shapes.rs  memory_usage.rs  parallel_build.rs  patterns.rs  systematic_difference.rs  systematic_get.rs  systematic_insert.rs  systematic_intersection.rs  systematic_patterns.rs  systematic_remove.rs  systematic_union.rs
criterion-reports/: index.html
criterion-reports/criterion-report-geometry_cylinder/: index.html
criterion-reports/criterion-report-geometry_line/: index.html
criterion-reports/criterion-report-geometry_point_conversion/: index.html
criterion-reports/criterion-report-geometry_polygon/: index.html
criterion-reports/criterion-report-geometry_solid/: index.html
criterion-reports/criterion-report-geometry_sphere/: index.html
criterion-reports/criterion-report-geometry_triangle/: index.html
criterion-reports/criterion-report-geometry_tube/: index.html
criterion-reports/criterion-report-query_ops_unary_extrude/: index.html
criterion-reports/criterion-report-query_ops_unary_falloff_linear/: index.html
criterion-reports/criterion-report-query_ops_unary_shift/: index.html
criterion-reports/criterion-report-query_ops_unary_zoom_out/: index.html
criterion-reports/criterion-report-spatial_id_set_difference/: index.html
criterion-reports/criterion-report-spatial_id_set_geometry/: index.html
criterion-reports/criterion-report-spatial_id_set_geometry_cylinder/: index.html
criterion-reports/criterion-report-spatial_id_set_get/: index.html
criterion-reports/criterion-report-spatial_id_set_insert/: index.html
criterion-reports/criterion-report-spatial_id_set_intersection/: index.html
criterion-reports/criterion-report-spatial_id_set_parallel_build/: index.html
criterion-reports/criterion-report-spatial_id_set_remove/: index.html
criterion-reports/criterion-report-spatial_id_set_union/: index.html
dev/bench/: data.js
docs/: conversion-traits.md  docs-rule.md  error.md  file-naming-conventions.md  flex-tree-collections.md  geometry-relation.md  geometry-test.md  public-api-rule.md  serde-openapi-rule.md  spatialId-relation.md  spatialId.md  temporal-id-feature.md  triangle.md
examples/: table_json.rs
report/: index.html
sample/: tran1.txt
src/: error.rs  lib.rs  macros.rs  main.rs  point.rs
src/bit_vec/: ancestors.rs  division.rs  divison.rs  flip_leaf.rs  flip_lowest_layer.rs  format.rs  mod.rs  pop_leaf.rs  relation.rs  remove_bottom_layer.rs  remove_lowest_layer.rs  reverse_bottom_layer.rs  subtract.rs  top_prefix.rs  under_prefix.rs  upper_bound.rs
src/encode_id/: decode.rs  mod.rs
src/encode_id_kv/: error.rs  mod.rs  multi_store.rs  single_store.rs
src/encode_id_set/: decode.rs  difference.rs  get.rs  intersection.rs  iterator.rs  mod.rs  remove.rs  union.rs
src/function/: line.rs  mod.rs  point.rs  route.rs  triangle.rs
src/geometry/: constants.rs  coordinate.rs  ecef.rs  geometry_relation.rs  helpers.rs  mod.rs  polygon.rs  shapes.rs  solid.rs  surface.rs  traits.rs  triangle.rs
src/id/: mod.rs  space_id.rs
src/interval_manager/: mod.rs
(+737 files in other folders)
