[package]
name = "kasane-logic"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "This is Kasane-logic"

[dependencies]
libm = "0.2.16"
rand = { version = "0.9.2", optional = true }

[features]
default = ["random"]
random = [ "rand" ]
temporal_id = []

[dev-dependencies]
rand = "0.9.2"
proptest = "1.10.0"
rand_chacha = "0.9.0"
insta = "1"
criterion = "0.8.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook","run-cargo-test", "run-cargo-clippy","run-cargo-fmt","run-for-all"]

[[bin]]
name = "kasane-logic"
bench = false

[lib]
bench = false

[[bench]]
name = "geometry_line"
path = "benches/geometry/shape/line.rs"
harness = false

[[bench]]
name = "geometry_triangle"
path = "benches/geometry/shape/triangle.rs"
harness = false

[[bench]]
name = "geometry_sphere"
path = "benches/geometry/shape/sphere.rs"
harness = false

[[bench]]
name = "geometry_cylinder"
path = "benches/geometry/shape/cylinder.rs"
harness = false

[[bench]]
name = "geometry_tube"
path = "benches/geometry/shape/tube.rs"
harness = false

[[bench]]
name = "geometry_point_conversion"
path = "benches/geometry/point/conversion.rs"
harness = false

[[bench]]
name = "spatial_id_set_insert"
path = "benches/spatial_id_set/systematic_insert.rs"
harness = false

[[bench]]
name = "spatial_id_set_get"
path = "benches/spatial_id_set/systematic_get.rs"
harness = false

[[bench]]
name = "spatial_id_set_remove"
path = "benches/spatial_id_set/systematic_remove.rs"
harness = false

[[bench]]
name = "spatial_id_set_union"
path = "benches/spatial_id_set/systematic_union.rs"
harness = false

[[bench]]
name = "spatial_id_set_intersection"
path = "benches/spatial_id_set/systematic_intersection.rs"
harness = false

[[bench]]
name = "spatial_id_set_difference"
path = "benches/spatial_id_set/systematic_difference.rs"
harness = false

[[bench]]
name = "spatial_id_set_geometry"
path = "benches/spatial_id_set/geometry_shapes.rs"
harness = false

[[bench]]
name = "spatial_id_set_geometry_cylinder"
path = "benches/spatial_id_set/geometry_cylinder_set.rs"
harness = false

[[bench]]
name = "spatial_id_set_memory"
path = "benches/spatial_id_set/memory_usage.rs"
harness = false

