[package]
name = "kasane-logic"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "This is Kasane-logic"

# デモ用バイナリ。JSON 読み書きとファイル I/O を使うため std と json が要る。
[[bin]]
name = "kasane-logic"
path = "src/main.rs"
required-features = ["std", "json"]

[workspace]
members = [
    ".",
    "xtask"
]

[dependencies]
# デフォルトで必要なもの
hashbrown = "0.15.2"
libm = "0.2.16"

# featuresで切り替え可能なもの
rand = { version = "0.10.2", optional = true }
rayon = { version = "1.10", optional = true }
rkyv = { version = "0.8.17", features = ["unaligned"], optional = true }
serde = { version = "1", default-features = false, features = ["alloc", "derive"], optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }

[features]
default = ["std", "rayon", "json"]
std = []
rayon = ["dep:rayon", "std"]
random = [ "rand" ]
temporal_id = []
rand = ["dep:rand"]
persist = ["dep:rkyv", "std"]
json = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
rand = "0.10.1"
proptest = "1.11.0"
rand_chacha = "0.10.0"
insta = "1"
criterion = { version = "0.8.2", features = ["html_reports"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook","run-cargo-test", "run-cargo-clippy","run-cargo-fmt"]

[profile.dev]
debug = 0 
codegen-units = 256
split-debuginfo = "unpacked"

[profile.test]
debug = 0 
codegen-units = 256

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[lib]
bench = false

[[bench]]
name = "geometry_line"
path = "benches/geometry/shape/line.rs"
harness = false

[[bench]]
name = "geometry_triangle"
path = "benches/geometry/shape/triangle.rs"
harness = false

[[bench]]
name = "geometry_sphere"
path = "benches/geometry/shape/sphere.rs"
harness = false

[[bench]]
name = "geometry_cylinder"
path = "benches/geometry/shape/cylinder.rs"
harness = false

[[bench]]
name = "geometry_tube"
path = "benches/geometry/shape/tube.rs"
harness = false

[[bench]]
name = "geometry_solid"
path = "benches/geometry/shape/solid.rs"
harness = false

[[bench]]
name = "geometry_polygon"
path = "benches/geometry/shape/polygon.rs"
harness = false

[[bench]]
name = "geometry_point_conversion"
path = "benches/geometry/point/conversion.rs"
harness = false

[[bench]]
name = "spatial_id_set_insert"
path = "benches/spatial_id_set/systematic_insert.rs"
harness = false

[[bench]]
name = "spatial_id_set_get"
path = "benches/spatial_id_set/systematic_get.rs"
harness = false

[[bench]]
name = "spatial_id_set_remove"
path = "benches/spatial_id_set/systematic_remove.rs"
harness = false

[[bench]]
name = "spatial_id_set_union"
path = "benches/spatial_id_set/systematic_union.rs"
harness = false

[[bench]]
name = "spatial_id_set_intersection"
path = "benches/spatial_id_set/systematic_intersection.rs"
harness = false

[[bench]]
name = "spatial_id_set_difference"
path = "benches/spatial_id_set/systematic_difference.rs"
harness = false

[[bench]]
name = "spatial_id_set_geometry"
path = "benches/spatial_id_set/geometry_shapes.rs"
harness = false

[[bench]]
name = "spatial_id_set_geometry_cylinder"
path = "benches/spatial_id_set/geometry_cylinder_set.rs"
harness = false

[[bench]]
name = "spatial_id_set_memory"
path = "benches/spatial_id_set/memory_usage.rs"
harness = false

[[bench]]
name = "spatial_id_set_parallel_build"
path = "benches/spatial_id_set/parallel_build.rs"
harness = false
# 並列実装（Arc ベースの共有ノード）と sample JSON の読み込みを前提とするベンチ。
required-features = ["rayon"]

[[bench]]
name = "query_ops_unary_shift"
path = "benches/query/ops/unary/shift.rs"
harness = false

[[bench]]
name = "query_ops_unary_falloff_linear"
path = "benches/query/ops/unary/falloff_linear.rs"
harness = false

[[bench]]
name = "query_ops_unary_zoom_out"
path = "benches/query/ops/unary/zoom_out.rs"
harness = false

[[bench]]
name = "query_ops_unary_extrude"
path = "benches/query/ops/unary/extrude.rs"
harness = false

[[bench]]
name = "query_workflow_bldg_risk"
path = "benches/query/workflow/bldg_risk.rs"
harness = false
# 並列実装（Arc ベースの共有ノード）と sample JSON の読み込みを前提とするベンチ。
required-features = ["rayon", "json"]

[[bench]]
name = "query_lazy_get"
path = "benches/query/lazy/get.rs"
harness = false

[[bench]]
name = "query_lazy_workflow_bldg_risk"
path = "benches/query/lazy/bldg_risk.rs"
harness = false
# 並列実装（Arc ベースの共有ノード）と sample JSON の読み込みを前提とするベンチ。
required-features = ["rayon", "json"]

[[example]]
name = "table_json"
required-features = ["json"]
